export interface MedicalCondition {
    id : string;
    designation : string;
    description? : string;
    symptoms : string;
}